--- a/app/views/RestaurantDetail.xml
+++ b/app/views/RestaurantDetail.xml
@@ -30,6 +30,7 @@
 				<Label id="inspectedDate" text="{inspectedDate}" />
 				<Label id="numDemerits" text="{demerits}" />
 				<View id="itemSeparator"></View>
+				<Label id = "lblViolationsHeader">Violations:</Label>
 				<Label class="lblViolations" text="{violations}"></Label>
 			</TableViewRow>
 		</TableView>
